update grafana crds

--- a/crds/grafana-operator/v5.14.0.grafana.integreatly.org_grafanafolders.yaml
+++ b/crds/grafana-operator/v5.14.0.grafana.integreatly.org_grafanafolders.yaml
@@ -3,22 +3,30 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.14.0
-  name: grafanacontactpoints.grafana.integreatly.org
+    controller-gen.kubebuilder.io/version: v0.16.3
+  name: grafanafolders.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
-    kind: GrafanaContactPoint
-    listKind: GrafanaContactPointList
-    plural: grafanacontactpoints
-    singular: grafanacontactpoint
+    categories:
+    - grafana-operator
+    kind: GrafanaFolder
+    listKind: GrafanaFolderList
+    plural: grafanafolders
+    singular: grafanafolder
   scope: Namespaced
   versions:
-  - name: v1beta1
+  - additionalPrinterColumns:
+    - jsonPath: .status.NoMatchingInstances
+      name: No matching instances
+      type: boolean
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaContactPoint is the Schema for the grafanacontactpoints
-          API
+        description: GrafanaFolder is the Schema for the grafanafolders API
         properties:
           apiVersion:
             description: |-
@@ -38,11 +46,11 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaContactPointSpec defines the desired state of GrafanaContactPoint
+            description: GrafanaFolderSpec defines the desired state of GrafanaFolder
             properties:
               allowCrossNamespaceImport:
-                type: boolean
-              disableResolveMessage:
+                description: allow to import this resources from an operator in a
+                  different namespace
                 type: boolean
               instanceSelector:
                 description: selects Grafanas for import
@@ -93,63 +101,45 @@ spec:
                 x-kubernetes-validations:
                 - message: Value is immutable
                   rule: self == oldSelf
-              name:
+              parentFolderRef:
+                description: Reference to an existing GrafanaFolder CR in the same
+                  namespace
+                type: string
+              parentFolderUID:
+                description: UID of the folder in which the current folder should
+                  be created
+                type: string
+              permissions:
+                description: raw json with folder permissions
                 type: string
               resyncPeriod:
-                default: 10m
+                default: 5m
+                description: how often the folder is synced, defaults to 5m if not
+                  set
                 format: duration
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
-              settings:
-                x-kubernetes-preserve-unknown-fields: true
-              type:
-                enum:
-                - alertmanager
-                - prometheus-alertmanager
-                - dingding
-                - discord
-                - email
-                - googlechat
-                - kafka
-                - line
-                - opsgenie
-                - pagerduty
-                - pushover
-                - sensugo
-                - sensu
-                - slack
-                - teams
-                - telegram
-                - threema
-                - victorops
-                - webhook
-                - wecom
-                - hipchat
-                - oncall
+              title:
                 type: string
             required:
             - instanceSelector
-            - name
-            - settings
             type: object
+            x-kubernetes-validations:
+            - message: Only one of parentFolderUID or parentFolderRef can be set
+              rule: (has(self.parentFolderUID) && !(has(self.parentFolderRef))) ||
+                (has(self.parentFolderRef) && !(has(self.parentFolderUID))) || !(has(self.parentFolderRef)
+                && (has(self.parentFolderUID)))
           status:
-            description: GrafanaContactPointStatus defines the observed state of GrafanaContactPoint
+            description: GrafanaFolderStatus defines the observed state of GrafanaFolder
             properties:
+              NoMatchingInstances:
+                description: The folder instanceSelector can't find matching grafana
+                  instances
+                type: boolean
               conditions:
-                description: |-
-                  INSERT ADDITIONAL STATUS FIELD - define observed state of cluster
-                  Important: Run "make" to regenerate code after modifying this file
                 items:
-                  description: "Condition contains details for one aspect of the current
-                    state of this API Resource.\n---\nThis struct is intended for
-                    direct use as an array at the field path .status.conditions.  For
-                    example,\n\n\n\ttype FooStatus struct{\n\t    // Represents the
-                    observations of a foo's current state.\n\t    // Known .status.conditions.type
-                    are: \"Available\", \"Progressing\", and \"Degraded\"\n\t    //
-                    +patchMergeKey=type\n\t    // +patchStrategy=merge\n\t    // +listType=map\n\t
-                    \   // +listMapKey=type\n\t    Conditions []metav1.Condition `json:\"conditions,omitempty\"
-                    patchStrategy:\"merge\" patchMergeKey:\"type\" protobuf:\"bytes,1,rep,name=conditions\"`\n\n\n\t
-                    \   // other fields\n\t}"
+                  description: Condition contains details for one aspect of the current
+                    state of this API Resource.
                   properties:
                     lastTransitionTime:
                       description: |-
@@ -190,12 +180,7 @@ spec:
                       - Unknown
                       type: string
                     type:
-                      description: |-
-                        type of condition in CamelCase or in foo.example.com/CamelCase.
-                        ---
-                        Many .condition.type values are consistent across resources like Available, but because arbitrary conditions can be
-                        useful (see .node.status.conditions), the ability to deconflict is important.
-                        The regex it matches is (dns1123SubdomainFmt/)?(qualifiedNameFmt)
+                      description: type of condition in CamelCase or in foo.example.com/CamelCase.
                       maxLength: 316
                       pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
                       type: string
@@ -207,8 +192,15 @@ spec:
                   - type
                   type: object
                 type: array
-            required:
-            - conditions
+              hash:
+                description: |-
+                  INSERT ADDITIONAL STATUS FIELD - define observed state of cluster
+                  Important: Run "make" to regenerate code after modifying this file
+                type: string
+              lastResync:
+                description: Last time the folder was resynced
+                format: date-time
+                type: string
             type: object
         type: object
     served: true
