--- a/crds/grafana-operator/v5.14.0.grafana.integreatly.org_grafanaalertrulegroups.yaml
+++ b/crds/grafana-operator/v5.14.0.grafana.integreatly.org_grafanaalertrulegroups.yaml
@@ -3,21 +3,23 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.14.0
-  name: grafananotificationpolicies.grafana.integreatly.org
+    controller-gen.kubebuilder.io/version: v0.16.3
+  name: grafanaalertrulegroups.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
-    kind: GrafanaNotificationPolicy
-    listKind: GrafanaNotificationPolicyList
-    plural: grafananotificationpolicies
-    singular: grafananotificationpolicy
+    categories:
+    - grafana-operator
+    kind: GrafanaAlertRuleGroup
+    listKind: GrafanaAlertRuleGroupList
+    plural: grafanaalertrulegroups
+    singular: grafanaalertrulegroup
   scope: Namespaced
   versions:
   - name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaNotificationPolicy is the Schema for the GrafanaNotificationPolicy
+        description: GrafanaAlertRuleGroup is the Schema for the grafanaalertrulegroups
           API
         properties:
           apiVersion:
@@ -38,9 +40,18 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaNotificationPolicySpec defines the desired state of
-              GrafanaNotificationPolicy
+            description: GrafanaAlertRuleGroupSpec defines the desired state of GrafanaAlertRuleGroup
             properties:
+              allowCrossNamespaceImport:
+                type: boolean
+              folderRef:
+                description: Match GrafanaFolders CRs to infer the uid
+                type: string
+              folderUID:
+                description: |-
+                  UID of the folder containing this rule group
+                  Overrides the FolderSelector
+                type: string
               instanceSelector:
                 description: selects Grafanas for import
                 properties:
@@ -90,104 +101,141 @@ spec:
                 x-kubernetes-validations:
                 - message: Value is immutable
                   rule: self == oldSelf
+              interval:
+                format: duration
+                pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
+                type: string
               resyncPeriod:
                 default: 10m
                 format: duration
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
-              route:
-                description: Routes for alerts to match against
-                properties:
-                  continue:
-                    description: continue
-                    type: boolean
-                  group_by:
-                    description: group by
-                    items:
+              rules:
+                items:
+                  description: AlertRule defines a specific rule to be evaluated.
+                    It is based on the upstream model with some k8s specific type
+                    mappings
+                  properties:
+                    annotations:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    condition:
                       type: string
-                    type: array
-                  group_interval:
-                    description: group interval
-                    type: string
-                  group_wait:
-                    description: group wait
-                    type: string
-                  match_re:
-                    additionalProperties:
+                    data:
+                      items:
+                        properties:
+                          datasourceUid:
+                            description: Grafana data source unique identifier; it
+                              should be '__expr__' for a Server Side Expression operation.
+                            type: string
+                          model:
+                            description: JSON is the raw JSON query and includes the
+                              above properties as well as custom properties.
+                            x-kubernetes-preserve-unknown-fields: true
+                          queryType:
+                            description: |-
+                              QueryType is an optional identifier for the type of query.
+                              It can be used to distinguish different types of queries.
+                            type: string
+                          refId:
+                            description: RefID is the unique identifier of the query,
+                              set by the frontend call.
+                            type: string
+                          relativeTimeRange:
+                            description: relative time range
+                            properties:
+                              from:
+                                description: from
+                                format: int64
+                                type: integer
+                              to:
+                                description: to
+                                format: int64
+                                type: integer
+                            type: object
+                        type: object
+                      type: array
+                    execErrState:
+                      enum:
+                      - OK
+                      - Alerting
+                      - Error
+                      - KeepLast
                       type: string
-                    description: match re
-                    type: object
-                  matchers:
-                    description: matchers
-                    items:
+                    for:
+                      format: duration
+                      pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
+                      type: string
+                    isPaused:
+                      type: boolean
+                    labels:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    noDataState:
+                      enum:
+                      - Alerting
+                      - NoData
+                      - OK
+                      - KeepLast
+                      type: string
+                    notificationSettings:
                       properties:
-                        isEqual:
-                          description: is equal
-                          type: boolean
-                        isRegex:
-                          description: is regex
-                          type: boolean
-                        name:
-                          description: name
+                        group_by:
+                          items:
+                            type: string
+                          type: array
+                        group_interval:
                           type: string
-                        value:
-                          description: value
+                        group_wait:
+                          type: string
+                        mute_time_intervals:
+                          items:
+                            type: string
+                          type: array
+                        receiver:
+                          type: string
+                        repeat_interval:
                           type: string
                       required:
-                      - isRegex
-                      - value
+                      - receiver
                       type: object
-                    type: array
-                  mute_time_intervals:
-                    description: mute time intervals
-                    items:
+                    title:
+                      example: Always firing
+                      maxLength: 190
+                      minLength: 1
                       type: string
-                    type: array
-                  object_matchers:
-                    description: object matchers
-                    items:
-                      description: |-
-                        ObjectMatcher ObjectMatcher is a matcher that can be used to filter alerts.
-
-
-                        swagger:model ObjectMatcher
-                      items:
-                        type: string
-                      type: array
-                    type: array
-                  provenance:
-                    description: provenance
-                    type: string
-                  receiver:
-                    description: receiver
-                    type: string
-                  repeat_interval:
-                    description: repeat interval
-                    type: string
-                  routes:
-                    description: routes
-                    x-kubernetes-preserve-unknown-fields: true
-                type: object
+                    uid:
+                      pattern: ^[a-zA-Z0-9-_]+$
+                      type: string
+                  required:
+                  - condition
+                  - data
+                  - execErrState
+                  - for
+                  - noDataState
+                  - title
+                  - uid
+                  type: object
+                type: array
             required:
             - instanceSelector
-            - route
+            - interval
+            - rules
             type: object
+            x-kubernetes-validations:
+            - message: Only one of FolderUID or FolderRef can be set
+              rule: (has(self.folderUID) && !(has(self.folderRef))) || (has(self.folderRef)
+                && !(has(self.folderUID)))
           status:
-            description: GrafanaNotificationPolicyStatus defines the observed state
-              of GrafanaNotificationPolicy
+            description: GrafanaAlertRuleGroupStatus defines the observed state of
+              GrafanaAlertRuleGroup
             properties:
               conditions:
                 items:
-                  description: "Condition contains details for one aspect of the current
-                    state of this API Resource.\n---\nThis struct is intended for
-                    direct use as an array at the field path .status.conditions.  For
-                    example,\n\n\n\ttype FooStatus struct{\n\t    // Represents the
-                    observations of a foo's current state.\n\t    // Known .status.conditions.type
-                    are: \"Available\", \"Progressing\", and \"Degraded\"\n\t    //
-                    +patchMergeKey=type\n\t    // +patchStrategy=merge\n\t    // +listType=map\n\t
-                    \   // +listMapKey=type\n\t    Conditions []metav1.Condition `json:\"conditions,omitempty\"
-                    patchStrategy:\"merge\" patchMergeKey:\"type\" protobuf:\"bytes,1,rep,name=conditions\"`\n\n\n\t
-                    \   // other fields\n\t}"
+                  description: Condition contains details for one aspect of the current
+                    state of this API Resource.
                   properties:
                     lastTransitionTime:
                       description: |-
@@ -228,12 +276,7 @@ spec:
                       - Unknown
                       type: string
                     type:
-                      description: |-
-                        type of condition in CamelCase or in foo.example.com/CamelCase.
-                        ---
-                        Many .condition.type values are consistent across resources like Available, but because arbitrary conditions can be
-                        useful (see .node.status.conditions), the ability to deconflict is important.
-                        The regex it matches is (dns1123SubdomainFmt/)?(qualifiedNameFmt)
+                      description: type of condition in CamelCase or in foo.example.com/CamelCase.
                       maxLength: 316
                       pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
                       type: string
