--- a/crds/grafana-operator/v5.14.0.grafana.integreatly.org_grafanacontactpoints.yaml
+++ b/crds/grafana-operator/v5.14.0.grafana.integreatly.org_grafanacontactpoints.yaml
@@ -3,32 +3,24 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.14.0
-  name: grafanadatasources.grafana.integreatly.org
+    controller-gen.kubebuilder.io/version: v0.16.3
+  name: grafanacontactpoints.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
-    kind: GrafanaDatasource
-    listKind: GrafanaDatasourceList
-    plural: grafanadatasources
-    singular: grafanadatasource
+    categories:
+    - grafana-operator
+    kind: GrafanaContactPoint
+    listKind: GrafanaContactPointList
+    plural: grafanacontactpoints
+    singular: grafanacontactpoint
   scope: Namespaced
   versions:
-  - additionalPrinterColumns:
-    - jsonPath: .status.NoMatchingInstances
-      name: No matching instances
-      type: boolean
-    - format: date-time
-      jsonPath: .status.lastResync
-      name: Last resync
-      type: date
-    - jsonPath: .metadata.creationTimestamp
-      name: Age
-      type: date
-    name: v1beta1
+  - name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaDatasource is the Schema for the grafanadatasources API
+        description: GrafanaContactPoint is the Schema for the grafanacontactpoints
+          API
         properties:
           apiVersion:
             description: |-
@@ -48,50 +40,14 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaDatasourceSpec defines the desired state of GrafanaDatasource
+            description: GrafanaContactPointSpec defines the desired state of GrafanaContactPoint
             properties:
               allowCrossNamespaceImport:
-                description: allow to import this resources from an operator in a
-                  different namespace
                 type: boolean
-              datasource:
-                properties:
-                  access:
-                    type: string
-                  basicAuth:
-                    type: boolean
-                  basicAuthUser:
-                    type: string
-                  database:
-                    type: string
-                  editable:
-                    description: Deprecated field, it has no effect
-                    type: boolean
-                  isDefault:
-                    type: boolean
-                  jsonData:
-                    type: object
-                    x-kubernetes-preserve-unknown-fields: true
-                  name:
-                    type: string
-                  orgId:
-                    description: Deprecated field, it has no effect
-                    format: int64
-                    type: integer
-                  secureJsonData:
-                    type: object
-                    x-kubernetes-preserve-unknown-fields: true
-                  type:
-                    type: string
-                  uid:
-                    type: string
-                  url:
-                    type: string
-                  user:
-                    type: string
-                type: object
+              disableResolveMessage:
+                type: boolean
               instanceSelector:
-                description: selects Grafana instances for import
+                description: selects Grafanas for import
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
@@ -139,28 +95,41 @@ spec:
                 x-kubernetes-validations:
                 - message: Value is immutable
                   rule: self == oldSelf
-              plugins:
-                description: plugins
-                items:
-                  properties:
-                    name:
-                      type: string
-                    version:
-                      type: string
-                  required:
-                  - name
-                  - version
-                  type: object
-                type: array
+              name:
+                type: string
               resyncPeriod:
-                default: 5m
-                description: how often the datasource is refreshed, defaults to 5m
-                  if not set
+                default: 10m
                 format: duration
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
+              settings:
+                x-kubernetes-preserve-unknown-fields: true
+              type:
+                enum:
+                - alertmanager
+                - prometheus-alertmanager
+                - dingding
+                - discord
+                - email
+                - googlechat
+                - kafka
+                - line
+                - opsgenie
+                - pagerduty
+                - pushover
+                - sensugo
+                - sensu
+                - slack
+                - teams
+                - telegram
+                - threema
+                - victorops
+                - webhook
+                - wecom
+                - hipchat
+                - oncall
+                type: string
               valuesFrom:
-                description: environments variables from secrets or config maps
                 items:
                   properties:
                     targetPath:
@@ -180,9 +149,7 @@ spec:
                                 This field is effectively required, but due to backwards compatibility is
                                 allowed to be empty. Instances of this type with an empty value here are
                                 almost certainly wrong.
-                                TODO: Add other useful fields. apiVersion, kind, uid?
                                 More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                                TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.
                               type: string
                             optional:
                               description: Specify whether the ConfigMap or its key
@@ -206,9 +173,7 @@ spec:
                                 This field is effectively required, but due to backwards compatibility is
                                 allowed to be empty. Instances of this type with an empty value here are
                                 almost certainly wrong.
-                                TODO: Add other useful fields. apiVersion, kind, uid?
                                 More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                                TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.
                               type: string
                             optional:
                               description: Specify whether the Secret or its key must
@@ -225,26 +190,74 @@ spec:
                   type: object
                 type: array
             required:
-            - datasource
             - instanceSelector
+            - name
+            - settings
             type: object
           status:
-            description: GrafanaDatasourceStatus defines the observed state of GrafanaDatasource
+            description: GrafanaContactPointStatus defines the observed state of GrafanaContactPoint
             properties:
-              NoMatchingInstances:
-                description: The datasource instanceSelector can't find matching grafana
-                  instances
-                type: boolean
-              hash:
-                type: string
-              lastMessage:
-                type: string
-              lastResync:
-                description: Last time the datasource was resynced
-                format: date-time
-                type: string
-              uid:
-                type: string
+              conditions:
+                description: |-
+                  INSERT ADDITIONAL STATUS FIELD - define observed state of cluster
+                  Important: Run "make" to regenerate code after modifying this file
+                items:
+                  description: Condition contains details for one aspect of the current
+                    state of this API Resource.
+                  properties:
+                    lastTransitionTime:
+                      description: |-
+                        lastTransitionTime is the last time the condition transitioned from one status to another.
+                        This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
+                      format: date-time
+                      type: string
+                    message:
+                      description: |-
+                        message is a human readable message indicating details about the transition.
+                        This may be an empty string.
+                      maxLength: 32768
+                      type: string
+                    observedGeneration:
+                      description: |-
+                        observedGeneration represents the .metadata.generation that the condition was set based upon.
+                        For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+                        with respect to the current state of the instance.
+                      format: int64
+                      minimum: 0
+                      type: integer
+                    reason:
+                      description: |-
+                        reason contains a programmatic identifier indicating the reason for the condition's last transition.
+                        Producers of specific condition types may define expected values and meanings for this field,
+                        and whether the values are considered a guaranteed API.
+                        The value should be a CamelCase string.
+                        This field may not be empty.
+                      maxLength: 1024
+                      minLength: 1
+                      pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
+                      type: string
+                    status:
+                      description: status of the condition, one of True, False, Unknown.
+                      enum:
+                      - "True"
+                      - "False"
+                      - Unknown
+                      type: string
+                    type:
+                      description: type of condition in CamelCase or in foo.example.com/CamelCase.
+                      maxLength: 316
+                      pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                      type: string
+                  required:
+                  - lastTransitionTime
+                  - message
+                  - reason
+                  - status
+                  - type
+                  type: object
+                type: array
+            required:
+            - conditions
             type: object
         type: object
     served: true
