--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -553,3 +553,8 @@ prometheus-rules:
             expr: chainlink_multi_node_states{state!="Alive"} > 0
             keep_firing_for: "15m"
             description: "EVM Node ({{ $labels.network }} chainId {{ $labels.chainId }}, container {{ $labels.container }}) is down"
+          To_many_gcp_logs:
+            enabled: false
+            for: "5m"
+            description: "Container {{ $labels.container_name }} in pod {{ $labels.pod_name }} located in namespace {{ $labels.namespace_name }} sends to many logs {{ $labels.log }}"
+            expr: rate(stackdriver_k_8_s_container_logging_googleapis_com_log_entry_count[10m])/5 > 1000
