selected output channel

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -556,5 +556,5 @@ prometheus-rules:
           To_many_gcp_logs:
             enabled: false
             for: "5m"
-            description: "Container {{ $labels.container_name }} in pod {{ $labels.pod_name }} located in namespace {{ $labels.namespace_name }} sends to many logs {{ $labels.log }}"
+            description: "Container {{ $labels.container_name }} in pod {{ $labels.pod_name }} located in namespace {{ $labels.namespace_name }} sends to many logs ({{ $labels.log }})"
             expr: rate(stackdriver_k_8_s_container_logging_googleapis_com_log_entry_count[10m])/5 > 1000
