fix creating SA

--- a/charts/gha-runner-scale-set-controller/values.yaml
+++ b/charts/gha-runner-scale-set-controller/values.yaml
@@ -1,4 +1,5 @@
 gha-runner-scale-set-controller:
   enabled: false
   serviceAccount:
-    enabled: false
+    name: "gha-runner"
+    create: false
