--- a/charts/gha-runner-scale-set/values.yaml
+++ b/charts/gha-runner-scale-set/values.yaml
@@ -1,6 +1,7 @@
 gha-runner-scale-set:
   enabled: false
-  minRunners: 0
+  containerMode:
+    type: "kubernetes"
   controllerServiceAccount:
     namespace: gha-operator
-    name: "gha-runner"
+    name: "gha-operator"
