--- a/charts/gha-runner-scale-set-controller/values.yaml
+++ b/charts/gha-runner-scale-set-controller/values.yaml
@@ -1,5 +1,5 @@
 gha-runner-scale-set-controller:
   enabled: false
   serviceAccount:
-    name: "gha-runner"
-    create: false
+    name: "gha-operator"
+    create: true
