--- a/charts/gha-runner-scale-set/values.yaml
+++ b/charts/gha-runner-scale-set/values.yaml
@@ -2,6 +2,11 @@ gha-runner-scale-set:
   enabled: false
   containerMode:
     type: "kubernetes"
+    kubernetesModeWorkVolumeClaim:
+      accessModes: ["ReadWriteOnce"]
+      resources:
+        requests:
+        storage: 2Gi
   controllerServiceAccount:
     namespace: gha-operator
     name: "gha-operator"
