--- a/charts/gha-runner-scale-set/templates/workflow-pod.yaml
+++ b/charts/gha-runner-scale-set/templates/workflow-pod.yaml
@@ -9,6 +9,8 @@ data:
     kind: PodTemplate
     metadata:
       name: workflow-pod
+      labels: 
+        argocd.argoproj.io/instance: gha-runner-scale-set-gcp-int
     spec:
       serviceAccountName: runner
       securityContext:
