add argocd.argoproj.io/instance: gha-runner-scale-set-gcp-int

--- a/charts/gha-runner-scale-set/templates/workflow-pod.yaml
+++ b/charts/gha-runner-scale-set/templates/workflow-pod.yaml
@@ -9,6 +9,7 @@ data:
     kind: PodTemplate
     metadata:
       name: workflow-pod
+      argocd.argoproj.io/instance: gha-runner-scale-set-gcp-int
     spec:
       serviceAccountName: runner
       securityContext:
