change configMap to nonHardCode

--- a/charts/gha-runner-scale-set/values.yaml
+++ b/charts/gha-runner-scale-set/values.yaml
@@ -29,3 +29,9 @@ gha-runner-scale-set:
         - name: templates
           configMap:
             name: workflow-pod
+configMap:
+  enabled: false
+  name: workflow-pod
+  spec:
+    securityContext:
+      fsGroup: 1001
