--- a/charts/gha-runner-scale-set/templates/workflow-pod.yaml
+++ b/charts/gha-runner-scale-set/templates/workflow-pod.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.configMap.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -8,10 +9,13 @@ data:
     apiVersion: v1
     kind: PodTemplate
     metadata:
-      name: workflow-pod
+      name: {{ .Values.configMap.name }}
+      {{- with .Values.configMap.metaLabels }}
       labels:
-        argocd.argoproj.io/instance: gha-runner-scale-set-gcp-int
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+    {{- with .Values.configMap.spec }}
     spec:
-      serviceAccountName: runner
-      securityContext:
-        fsGroup: 1001
+      {{- toYaml . | nindent 6 }}
+    {{- end }}
+{{- end }}
