--- a/charts/gha-runner-scale-set/values.yaml
+++ b/charts/gha-runner-scale-set/values.yaml
@@ -1,6 +1,8 @@
 gha-runner-scale-set:
   enabled: false
   kubernetesModeServiceAccount:
+  controllerServiceAccount:
+    name: "gha-operator"
   containerMode:
     type: "kubernetes"
     kubernetesModeWorkVolumeClaim:
