--- a/charts/gha-runner-scale-set/values.yaml
+++ b/charts/gha-runner-scale-set/values.yaml
@@ -1,5 +1,6 @@
 gha-runner-scale-set:
   enabled: false
+  runnerScaleSetName: "infra-runner"
   kubernetesModeServiceAccount:
   controllerServiceAccount:
     name: "gha-operator"
