--- a/charts/chart_deps/prometheus/alertmanager-configs/templates/alertmanager-configs.yaml
+++ b/charts/chart_deps/prometheus/alertmanager-configs/templates/alertmanager-configs.yaml
@@ -12,7 +12,33 @@ items:
 {{ include "alertmanager-configs.labels" $ | indent 8 }}
         {{- toYaml $config.selector | nindent 8 }}
     spec:
-      {{- toYaml $config.spec | nindent 6 }}
+      {{- range $receiver := $config.receivers }}
+      receivers:
+        - name: {{ $receiver.name }}
+          {{- range $configsName, $configs := omit $receiver "name"}}
+          {{ $configsName }}:
+          {{- range $config := $configs }}
+          {{/* We use ternary operator instead of if/else here because of helm vars scopes */}}
+          {{- $config := ternary (tpl (toYaml $config) $ | fromYaml) $config $config.useTpl }}
+          {{- if hasKey $.Values.defaults $configsName }}
+          {{- $config := mustMerge $config (get $.Values.defaults $configsName) }}
+          {{- end }}
+          {{- toYaml (list (omit $config "useTpl") ) | nindent 10 }}
+          {{- end }}
+          {{- end }}
+      {{- end }}
+      {{- with $config.route }}
+      route:
+      {{- tpl (toYaml $config.route) $ | nindent 8 }}
+      {{- end }}
+      {{- with $config.inhibitRules }}
+      inhibitRules:
+      {{- tpl (toYaml $config.inhibitRules) $ | nindent 8 }}
+      {{- end }}
+      {{- with $config.muteTimeIntervals }}
+      muteTimeIntervals:
+      {{- tpl (toYaml $config.muteTimeIntervals) $ | nindent 8 }}
+      {{- end }}
 {{- end }}
 {{- end }}
 {{- end }}
