tpl for env attr in prom alerts + move externalRedis to default values for argocd chart

--- a/charts/chart_deps/prometheus/prometheus-rules/templates/prometheus-alerts.yaml
+++ b/charts/chart_deps/prometheus/prometheus-rules/templates/prometheus-alerts.yaml
@@ -1,5 +1,6 @@
 {{- $releasename := .Release.Name }}
 {{- range $name, $alert := .Values.PrometheusAlerts }}
+{{- $alert := set $alert "env" (tpl $alert.env $) }}
 {{- $namespace := $.Release.Namespace }}
 ---
 apiVersion: monitoring.coreos.com/v1
