--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -103,13 +103,18 @@ chart_apps:
         env: {{ .Values.env | toYaml | nindent 6 }}
   argocd:
     enabled: false
-    parameters:
-    - name: "argo-cd.server.ingress.hostname"
-      value: "argocd.{{ .Values.company.domain.env }}"
     values: |
       global:
         company: {{ .Values.company | toYaml | nindent 6 }}
         environment: {{ .Values.env | toYaml | nindent 6 }}
+      argo-cd:
+        externalRedis:
+          host: rfrm-argocd-{{ .Values.env.name }}-redis
+          port: 6379
+          existingSecret: "argocd-redis"
+        server:
+          ingress:
+            hostname: "argocd.{{ .Values.company.domain.env }}"
   prometheus:
     enabled: false
     values: |
