--- a/charts/thanos/values.yaml
+++ b/charts/thanos/values.yaml
@@ -1,3 +1,21 @@
+global:
+  company:
+    name: #example
+    gcp:
+      enabled: false
+      bucket:
+        prefix:
+      project_id: #example-production
+    domain:
+      root: #example.com
+      env: #int.example.com, dev.example.com, prd.example.com etc
+    network:
+      int_nat_gw:
+  env:
+    name: #aws-prd or aws-int or aws-stg
+    server: #https://2.2.2.2
+    short_name: #pre/prd/int/dev/etc
+
 kong-plugins:
   enabled: false
 
