--- a/charts/argocd/values.yaml
+++ b/charts/argocd/values.yaml
@@ -1,16 +1,19 @@
 global:
   company:
     name: #example
-    gcp:
-      enabled: false
-      bucket:
-        prefix:
-      project_id: #example-production
     domain:
       root: #example.com
       env: #int.example.com, dev.example.com, prd.example.com etc
-    network:
-      int_nat_gw:
+  network:
+    int_nat_gw:
+  registry:
+    url:
+  bucket:
+    prefix:
+    suffix:
+  #Cant use env: here because
+  #env is already set as global
+  #attr in original argocd chart
   environment:
     name: #aws-prd or aws-int or aws-stg
     server: #https://2.2.2.2
