--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -2,16 +2,19 @@ labels: {}
 
 company:
   name: #example
-  gcp:
-    enabled: false
-    bucket:
-      prefix:
-    project_id: #example-production
   domain:
     root: #example.com
     env: #int.example.com, dev.example.com, prd.example.com etc
-  network:
-    int_nat_gw:
+
+network:
+  int_nat_gw:
+
+registry:
+  url:
+
+bucket:
+  prefix:
+  suffix:
 
 externalEnvDomains: []
 
@@ -77,17 +80,23 @@ chart_apps:
     values: |
       global:
         company: {{ .Values.company | toYaml | nindent 6 }}
+        registry: {{ .Values.registry | toYaml | nindent 6 }}
+        bucket: {{ .Values.bucket | toYaml | nindent 6 }}
+        network: {{ .Values.network | toYaml | nindent 6 }}
         env: {{ .Values.env | toYaml | nindent 6 }}
       postgres-operator:
         configAwsOrGcp:
-          wal_gs_bucket: "{{ .Values.company.gcp.bucket.prefix }}-postgres-{{ .Values.env.short_name }}"
+          wal_gs_bucket: "{{ .Values.bucket.prefix }}-postgres-{{ .Values.bucket.suffix }}"
         configLogicalBackup:
-          logical_backup_s3_bucket: "{{ .Values.company.gcp.bucket.prefix }}-postgres-backup-{{ .Values.env.short_name }}"
+          logical_backup_s3_bucket: "{{ .Values.bucket.prefix }}-postgres-backup-{{ .Values.bucket.suffix }}"
   grafana:
     enabled: false
     values: |
       global:
         company: {{ .Values.company | toYaml | nindent 6 }}
+        registry: {{ .Values.registry | toYaml | nindent 6 }}
+        bucket: {{ .Values.bucket | toYaml | nindent 6 }}
+        network: {{ .Values.network | toYaml | nindent 6 }}
         env: {{ .Values.env | toYaml | nindent 6 }}
   konghq:
     enabled: false
@@ -101,12 +110,18 @@ chart_apps:
     values: |
       global:
         company: {{ .Values.company | toYaml | nindent 6 }}
+        registry: {{ .Values.registry | toYaml | nindent 6 }}
+        bucket: {{ .Values.bucket | toYaml | nindent 6 }}
+        network: {{ .Values.network | toYaml | nindent 6 }}
         env: {{ .Values.env | toYaml | nindent 6 }}
   argocd:
     enabled: false
     values: |
       global:
         company: {{ .Values.company | toYaml | nindent 6 }}
+        registry: {{ .Values.registry | toYaml | nindent 6 }}
+        bucket: {{ .Values.bucket | toYaml | nindent 6 }}
+        network: {{ .Values.network | toYaml | nindent 6 }}
         environment: {{ .Values.env | toYaml | nindent 6 }}
       argo-cd:
         externalRedis:
@@ -121,10 +136,16 @@ chart_apps:
     values: |
       global:
         company: {{ .Values.company | toYaml | nindent 6 }}
+        registry: {{ .Values.registry | toYaml | nindent 6 }}
+        bucket: {{ .Values.bucket | toYaml | nindent 6 }}
+        network: {{ .Values.network | toYaml | nindent 6 }}
         env: {{ .Values.env | toYaml | nindent 6 }}
   thanos:
     enabled: false
     values: |
       global:
         company: {{ .Values.company | toYaml | nindent 6 }}
+        registry: {{ .Values.registry | toYaml | nindent 6 }}
+        bucket: {{ .Values.bucket | toYaml | nindent 6 }}
+        network: {{ .Values.network | toYaml | nindent 6 }}
         env: {{ .Values.env | toYaml | nindent 6 }}
