--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -20,6 +20,11 @@ global:
 
 postgres-operator:
   enabled: false
+  configAwsOrGcp:
+    wal_gs_bucket: "{{ .Values.global.bucket.prefix }}-postgres-{{ .Values.global.bucket.suffix }}"
+  configLogicalBackup:
+    logical_backup_s3_bucket: "{{ .Values.global.bucket.prefix }}-postgres-backup-{{ .Values.global.bucket.suffix }}"
+    logical_backup_docker_image: "registry.opensource.zalan.do/acid/logical-backup:v1.10.1"
   configGeneral:
     enable_crd_registration: false
     docker_image: gramal/spilo:15-f0c5f71
@@ -34,9 +39,6 @@ postgres-operator:
       - "app.kubernetes.io/instance"
       - "app.kubernetes.io/name"
       - "app.kubernetes.io/version"
-
-  configLogicalBackup:
-    logical_backup_docker_image: "registry.opensource.zalan.do/acid/logical-backup:v1.10.1"
 
 postgres-pod-envs:
   #This is needed by default for all wal-e cloned instances
