--- a/charts/environments/values.yaml
+++ b/charts/environments/values.yaml
@@ -2,14 +2,15 @@ labels: {}
 
 company:
   name: #example
-  gcp:
-    enabled: false
-    bucket:
-      prefix:
   domain:
     root: #example.com
-  network:
-    int_nat_gw:
+
+network:
+  int_nat_gw:
+
+bucket:
+  prefix:
+  suffix:
 
 repository:
   url: #git@github.com:ggramal/infrared.git
@@ -22,17 +23,16 @@ repository:
 defaultValuesTpl: |
   company:
     name: {{ .Values.company.name }}
-    gcp:
-      enabled: {{ .Values.company.gcp.enabled }}
-      project_id: {{ printf "%s-%s" .Values.company.name .env.long_name }}
-      registry: {{ .env.registry }}
-      bucket:
-        prefix: {{ .Values.company.name }}
     domain:
       root: {{ .Values.company.domain.root }}
       env: {{ printf "%s.%s" .env.short_name .Values.company.domain.root }}
-    network:
-      int_nat_gw: {{ .Values.company.network.int_nat_gw }}
+  network:
+    int_nat_gw: {{ .Values.network.int_nat_gw }}
+  registry:
+    url: {{ .env.registry }}
+  bucket:
+    prefix: {{ .Values.company.name }}
+    suffix: {{ .env.short_name }}
   repository:
     url: {{ .Values.repository.url }}
   env:
