--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -35,7 +35,7 @@ postgres-operator:
       - "app.kubernetes.io/instance"
       - "app.kubernetes.io/name"
       - "app.kubernetes.io/version"
-
+  enable_owner_references: true
   configLogicalBackup:
     logical_backup_docker_image: "registry.opensource.zalan.do/acid/logical-backup:v1.10.1"
 
