update logical-backup pod

--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -24,7 +24,7 @@ postgres-operator:
     wal_gs_bucket: "{{ .Values.global.bucket.prefix }}-postgres-{{ .Values.global.bucket.suffix }}"
   configLogicalBackup:
     logical_backup_s3_bucket: "{{ .Values.global.bucket.prefix }}-postgres-backup-{{ .Values.global.bucket.suffix }}"
-    logical_backup_docker_image: "registry.opensource.zalan.do/acid/logical-backup:v1.10.1"
+    logical_backup_docker_image: "ghcr.io/zalando/postgres-operator/logical-backup:v1.14.0"
   configGeneral:
     enable_crd_registration: false
     docker_image: gramal/spilo:15-f0c5f71
