volumeName attribute for pvc

--- a/charts/chart_deps/app/common/templates/pvc.yaml
+++ b/charts/chart_deps/app/common/templates/pvc.yaml
@@ -16,6 +16,9 @@ spec:
   accessModes:
   - ReadWriteOnce
   {{- end }}
+  {{- if $pvc.volumeName }}
+  volumeName: {{ tpl $pvc.volumeName $ }}
+  {{- end }}
   resources:
     requests:
       storage: {{ $pvc.storage }}
