--- a/charts/konghq/templates/webhook-ca.yaml
+++ b/charts/konghq/templates/webhook-ca.yaml
@@ -30,5 +30,5 @@ spec:
   issuerRef:
     kind: Issuer
     name: {{ include "kong.fullname" . }}
-  name: {{ include "kong.fullname" . }}
+  secretName: {{ include "kong.fullname" . }}
 {{- end }}
