kong: create webhook cert if admissionWebhook is enabled and webhook use cermanager is true

--- a/charts/konghq/templates/webhook-ca.yaml
+++ b/charts/konghq/templates/webhook-ca.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.kong.ingressController.admissionWebhook.useCertManager }}
+{{- if and .Values.kong.ingressController.admissionWebhook.enabled .Values.kong.ingressController.admissionWebhook.useCertManager }}
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
